# wing-concepts

./: .gitignore  CMakeLists.txt  LICENSE
include/wing_concepts/: boolean.h  boolean_concepts.h  character.h  character_concepts.h  general.h  numeric.h  numeric_concepts.h  sorting.h  sorting_concepts.h  wing_concepts.h
include/wing_concepts/__detail/: __concepts_detail.h  concept_detail.h
test/: CMakeLists.txt  boolean_test.cpp  character_test.cpp  floating_point_test.cpp  integral_test.cpp  number_test.cpp
